Add timeout setting
